--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,7 +9,8 @@
   </a>
   <h2>I'm <a href="/">{{ site.data.theme.name }}</a>.</h2>
   <div id="bio">
-    <p>A brief bio or something witty.</p>
+    <p>Problem solver with a background in computational engineering. My interests lie in tapping the full power of data to accelerate the pace of research within drug discovery and personalized medicine. I have enjoyed the past three years in industry working in the areas of compound screening, biomarker identification and systems pharmacology modeling. Along the way, I've had some success in designing robust machine learning systems that fit a healthcare context.
+    </p>
     <p>
       Edit me in <code>_includes/sidebar.html</code>
     </p>
