--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,5 @@
 <nav>
-  <h1>Hi.</h1>
+  <h1></h1>
   <a href="/">
     {% if site.data.theme.social.gravatar %}
     <img src="http://www.gravatar.com/avatar/{{ site.data.theme.social.gravatar }}?s=200" id="gravatar" alt="My photo"/>
@@ -9,7 +9,7 @@
   </a>
   <h2> <a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p> Machine Learning, Drug Discovery, High Throughput Experimentation, Systems Biology
+    <p> Machine Learning, Drug Discovery, Systems Biology
     </p>
   </div>
   <div id="social">
