--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="navigation">
-  <a href="/" class="logo" title="ÄLG, a solitary moose.">
-    <img src="/static/moose.png" alt="Moose">
+  <a href="/" class="logo" title="Tree">
+    <img src="/static/tree_icon.png" alt="Tree">
   </a>
   <nav>
     <ul>
