--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,9 @@
 <header class="navigation">
   <nav>
     <ul>
-      <li><a href="/">writing</a></li>
-      <li><a href="/archive">archive</a></li>
-      <li><a href="/about">about</a></li>
-      <li class="no-bullet"><a href="/atom.xml">rss</a></li>
+      <li><a href="/">updates</a></li>
+      <li><a href="/archive">publications</a></li>
+      <li class="no-bullet"><a href="/about">about</a></li>
     </ul>
   </nav>
 </header>
