--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,10 @@
 <header class="navigation">
+  <style>
+  li {
+    display: inline;
+  }
+  </style>
+  
   <nav>
     <ul>
       <li><a href="/">updates</a></li>
