--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,9 +7,10 @@
   
   <nav>
     <ul>
+      <li><a href="/about">about</a></li>
       <li><a href="/">updates</a></li>
-      <li><a href="/archive">publications</a></li>
-      <li class="no-bullet"><a href="/about">about</a></li>
+      <li><a href="/publications">publications</a></li>
+      <li class="no-bullet"><a href="/files/CV_YRoohani.pdf">CV</a></li>
     </ul>
   </nav>
 </header>
