--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,7 @@
       <li><a href="/about">about</a></li>
       <li><a href="/">updates</a></li>
       <li><a href="/publications">publications</a></li>
-      <li class="no-bullet"><a href="/files/CV_YRoohani.pdf">CV</a></li>
+      <li class="no-bullet"><a href="/Data/CV_YRoohani.pdf">CV</a></li>
     </ul>
   </nav>
 </header>
