--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,8 @@
   </a>
   <h2> <a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
+    <p> firstnameDOTlastname@gmail
+    </p>
     <p> Machine Learning, Drug Discovery, Systems Biology
     </p>
   </div>
