changed email format

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <nav>
   <h2> <a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p> firstname.lastname@gmail.com
+    <p> first.last@gmail.com
     </p>
     <p> Machine Learning, Drug Discovery, Systems Biology
     </p>
