--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,7 +12,7 @@
       <li><a href="/">updates</a></li>
       <li><a href="/publications">publications</a></li>
       <li><a href="/Data/CV_YRoohani.pdf">CV</a></li>
-      <li class="no-bullet"><a href='/notes">notes</a></li>
+      <li class="no-bullet"><a href="/notes">notes</a></li>
     </ul>
   </nav>
 </header>
