--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,9 +1,9 @@
 <nav>
   <h2> <a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p> first.last@gmail.com
+    <p> yhr@csDOTstanfordDOTedu
     </p>
-    <p> Machine Learning, Drug Discovery, Systems Biology
+    <p> Machine Learning, Systems Biology, Experiment Design
     </p>
   </div>
   <div id="social">
