--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,7 +1,7 @@
 <nav>
   <h2> <a href="/">{{ site.data.theme.name }}</a></h2>
   <div id="bio">
-    <p> y h r@csDOTstanford (no spaces)
+    <p> yhr@cs.stanford.edu
     </p>
     <p> Machine Learning, Systems Biology, Experiment Design
     </p>
